--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.0",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/forms": "^6.1.0",
-    "@angular/http": "^6.1.0",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/router": "^6.1.0",
+    "@angular/animations": "^6.0.7",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/fire": "^5.1.0",
+    "@angular/flex-layout": "^6.0.0-beta.18",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/pwa": "^0.8.8",
+    "@angular/router": "^6.0.3",
+    "@angular/service-worker": "^6.0.3",
+    "@syncfusion/ej2": "^18.4.44",
+    "@syncfusion/ej2-angular-layouts": "^18.4.44",
+    "bootstrap": "^4.6.0",
     "core-js": "^2.5.4",
+    "jquery": "^3.5.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
