--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/service-worker": "^6.0.3",
     "@syncfusion/ej2": "^18.4.44",
     "@syncfusion/ej2-angular-layouts": "^18.4.44",
+    "@visurel/iconify-angular": "^11.0.0",
     "bootstrap": "^4.6.0",
     "core-js": "^2.5.4",
     "jquery": "^3.5.1",
