--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@syncfusion/ej2-angular-layouts": "^18.4.44",
     "bootstrap": "^4.6.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
